syntax = "proto3";

package word_war;

service WordWar {
  rpc Matching(MatchingRequest) returns (MatchingResponse) {};
  rpc Say(SayRequest) returns (SayResponse) {};
  rpc Game(GameRequest) returns (stream GameResponse) {};
  rpc Result(ResultRequest) returns (ResultResponse) {};
}

message SayRequest {
  string userId = 1;
  string message = 2;
  string roomId = 3;
}

message SayResponse {
  string userId = 1;
  string message = 2;
  string roomId = 3;
  bool valid = 4;
}

message MatchingRequest {
  string userId = 1;
}

// TODO: ここにへやの情報がはいる
message MatchingResponse {
  string roomId = 1;
  // member
  // repeat member []string = 2;
}

message GameRequest {
  string userId = 1;
  string roomId = 2;
}

message GameResponse {
  string userId = 1;
  string message = 2;
  string roomId = 3;
}

message ResultRequest {
  string userId = 1;
  string roomId = 2;
}

message ResultResponse {
  string userId = 1;
  string score = 2;
  string roomId = 3;
}
